First try at evening prayers

--- a/prayers.tex
+++ b/prayers.tex
@@ -257,4 +257,74 @@ Be given in every time and place. Amen.
 
 \end{multicols}
 
+\pagebreak
+
+\begin{multicols}{3}
+
+\section*{Traditional Evening Prayers}
+
+\textit{Kneel down, and say:}
+
+In the name of the Father, and of the Son, and of the Holy Ghost.  Amen.
+
+Blessed be the holy and undivided Trinity, now and forevermore.  Amen.
+
+Come, O Holy Ghost! Fill the hearts of Thy faithful, and kindle in them the fire
+of Thy divine love.
+
+\textit{Let us place ourselves in the presence of God.  Humbly adore Him:}
+
+Great God, the Lord of heaven and earth!  I prostrate myself before Thee.
+With all the Angels and Saints I adore Thee.  I acknowledge Thee to be my
+Creator and sovereign Lord, my first beginning and last end.  I render to Thee
+the homage of my being and life.  I submit myself to Thy holy Will, and I devote
+myself to Thy divine service, now and for ever.
+
+\paragraph{Our Father}
+
+\textsc{Our} Father, Who art in heaven, hallowed be Thy name.
+Thy kingdom come.  Thy will be done on earth, as it is in heaven.
+Give us this day our daily bread.  And forgive us our trespasses,
+as we forgive those who trespass against us.  And lead us not
+into temptation, but deliver us from evil.  Amen.
+
+\textit{In honor of the Immaculate Conception of our Blessed Lady:}
+
+\paragraph{Hail Mary}
+
+\textsc{Hail}, Mary, full of grace, the Lord is with thee;
+blessed art thou among women, and blessed is the fruit of
+thy womb, Jesus.  Holy Mary, Mother of God, pray for us sinners,
+now and at the hour of our death. Amen.
+
+\paragraph{Hail Mary}
+
+\textsc{Hail}, Mary, full of grace, the Lord is with thee;
+blessed art thou among women, and blessed is the fruit of
+thy womb, Jesus.  Holy Mary, Mother of God, pray for us sinners,
+now and at the hour of our death. Amen.
+
+\paragraph{Hail Mary}
+
+\textsc{Hail}, Mary, full of grace, the Lord is with thee;
+blessed art thou among women, and blessed is the fruit of
+thy womb, Jesus.  Holy Mary, Mother of God, pray for us sinners,
+now and at the hour of our death. Amen.
+
+\paragraph{The Apostles' Creed}
+
+\textsc{I believe} in God, the Father almighty, Creator of Heaven and earth,
+and in in Jesus Christ, His only Son, our Lord. He was conceived by
+the Holy Ghost, and born of the Virgin Mary. He suffered under Pontius
+Pilate, was crucified, died and was buried. He descended into Hell.
+On the third day He rose again. He ascended into Heaven, and is seated
+at the right hand of God the Father Almighty. He will come again to
+judge the living and the dead. I believe in the Holy Spirit, the Holy
+Catholic Church, the communion of saints, the forgiveness of sins, the
+resurrection of the body, and life everlasting. Amen. 
+
+\paragraph{The Confiteor}
+
+\end{multicols}
+
 \end{document}
