Added bulk of evening prayers

--- a/prayers.tex
+++ b/prayers.tex
@@ -1,15 +1,32 @@
-\documentclass{article}
+\documentclass[9pt]{article}
+
+\usepackage{extsizes}
 
 \usepackage{multicol}
+\usepackage{titlesec}
 
 \usepackage{geometry}
 \geometry{letterpaper,margin=0.5in}
 
+\usepackage{fontspec}
+
+\newcommand{\textjuni}[1]{{\fontspec{Junicode}#1}}
+
 \usepackage[parfill]{parskip}
+
+\usepackage[T1]{fontenc}
+\usepackage{times}
 
 \title{Traditional Catholic Prayers}
 \date{2019-03-31}
 \author{John DeCuir}
+
+\titlespacing*{\section}
+{0pt}{2ex}{1ex}
+\titlespacing*{\subsection}
+{0pt}{2ex}{1ex}
+\titlespacing*{\paragraph}
+{0pt}{2ex}{1ex}
 
 
 \begin{document}
@@ -324,6 +341,256 @@ Catholic Church, the communion of saints, the forgiveness of sins, the
 resurrection of the body, and life everlasting. Amen. 
 
 \paragraph{The Confiteor}
+
+\textsc{I confess} to Almighty God, to blessed Mary ever Virgin, to blessed
+Michael the Archangel, to blessed John the Baptist, to the holy Apostles Peter
+and Paul, and to all the Saints, that I have sinned exceedingly in thought,
+word, and deed \textit{(strike your breast thrice in token of contrition)},
+through my fault, through my fault, through my most grievous fault.  Therefore I
+beseech blessed Mary ever Virgin, blessed Michael the Archangel, blessed John
+the Baptist, the holy Apostles Peter and Paul, and all the Saints to pray to the
+Lord our God for me.\\
+\textjuni{\char"211F}. May almighty God have mercy upon us, forgive us our sins,
+and bring us unto life everlasting.  Amen.\\
+\textjuni{\char"2123}. May the almighty and merciful Lord grant us pardon,
+absolution, and remission of our sins.\\
+\textjuni{\char"211F}. Amen.
+
+\subsection*{Examination of Conscience}
+
+\textit{Examine yourself for what sins you have committed this day, by thought,
+word, deed, or omission.}
+
+\paragraph{Act of Faith}
+
+\textsc{O my} God! I firmly believe that Thou art one God in three Divine persons,
+Father, Son, and Holy Ghost; I believe that Thy Divine Son became man,
+and died for our sins, and that he will come to judge the living and the
+dead. I believe these and all the truths which the Holy Catholic Church
+teaches, because Thou hast revealed them, who canst neither deceive nor
+be deceived.
+
+\paragraph{Act of Hope}
+
+\textsc{O my} God! relying on Thy infinite goodness and promises, I hope to obtain
+pardon of my sins, the help of Thy grace, and life everlasting, through
+the merits of Jesus Christ, my Lord and Redeemer. 
+
+\paragraph{Act of Charity}
+
+\textsc{O my} God! I love Thee above all things, with my whole heart and soul,
+because Thou art all-good and worthy of all love. I love my neighbor as
+myself for the love of Thee. I forgive all who have injured me, and ask
+pardon of all whom I have injured. 
+
+\paragraph{Act of Contrition}
+
+\textsc{O my} God, I am heartily sorry for having offended Thee, and I detest
+all my sins, because I dread the loss of heaven and the pains of hell, but most
+of all because they offend Thee, my God, who art all good, and deserving of all
+my love. I firmly resolve with the help of Thy grace to confess my sins, to do
+penance, and to amend my life. Amen. 
+
+\subsection*{Litany of the Blessed Virgin}
+
+Lord, have mercy on us.\\
+Christ, have mercy on us.\\
+Lord, have mercy on us.\\
+Christ, hear us.\\
+Christ, graciously hear us.\\
+God, the Father of heaven, \textit{have mercy on us.}\\
+God the Son, Redeemer of the world, *\\
+God the Holy Ghost,\\
+Holy Trinity, one God,\\
+Holy Mary, \textit{pray for us.}\\
+Holy Mother of God, *\\
+Holy Virgin of virgins,\\
+Mother of Christ,\\
+Mother of the Church\\
+Mother of divine grace,\\
+Mother most pure,\\
+Mother most chaste,\\
+Mother inviolate,\\
+Mother undefiled,\\
+Mother most amiable,\\
+Mother most admirable,\\
+Mother of good counsel,\\
+Mother of our Creator,\\
+Mother of our Savior,\\
+Virgin most prudent,\\
+Virgin most venerable,\\
+Virgin most renouned,\\
+Virgin most powerful,\\
+Virgin most merciful,\\
+Virgin most faithful,\\
+Mirror of justice,\\
+Seat of wisdom,\\
+Cause of our joy,\\
+Spiritual vessel,\\
+Vessel of honor,\\
+Singular vessel of devotion,\\
+Mystical rose,\\
+Tower of David,\\
+Tower of ivory,\\
+House of gold,\\
+Ark of the covenant,\\
+Gate of heaven,\\
+Morning star,\\
+Health of the sick,\\
+Refuge of sinners,\\
+Comforter of the afflicted,\\
+Help of Christians,\\
+Queen of Angels,\\
+Queen of Patriarchs,\\
+Queen of Prophets,\\
+Queen of Apostles,\\
+Queen of Martyrs,\\
+Queen of Confessors,\\
+Queen of Virgins,\\
+Queen of all Saints,\\
+Queen conceived without original sin,\\
+Queen assumed into heaven,\\
+Queen of the most holy Rosary\\
+Queen of the family,\\
+Queen of Peace,\\
+Lamb of God, who takest away the sins of the world, \textit{spare us, O Lord.}\\
+Lamb of God, who takest away the sins of the world, \textit{graciously hear us O Lord.}\\
+Lamb of God, who takest away the sins of the world, \textit{have mercy on us.}
+
+\textit{From the Purification to Easter and after Pentecost:}
+
+\textjuni{\char"2123}. Pray for us, O holy Mother of God.\\
+\textjuni{\char"211F}. That we may be made worthy of the promises of Christ.
+
+\textit{Let us pray.} Grant that we Thy servants, Lord, may enjoy unfailing
+health of mind and body, and through the prayers of the ever blessed Virgin Mary
+in her glory, free us from our sorrows in this world and give us eternal
+happiness in the next.  Through Christ our Lord.
+
+\textjuni{\char"211F}. Amen.
+
+\subsection*{Prayer for the Faithful Departed}
+
+\textsc{O God!} The Creator and Redeemer of all the faithful, grant to the souls
+of Thy servants departed the remission of all their sins: that through pious
+supplications they may obtain that pardon which they have always desired: Who
+livest and reignest world without end. Amen.
+
+\subsection*{Prayer for a Happy Death}
+
+\textsc{O God,} Who hast doomed all men to die, but hast concealed from all the
+hour of their death, grant that I may pass my days in the practice of holiness
+and justice, and that I may deserve to quit this world in the peace of a good
+conscience, and in the embraces of Thy love.  Through Christ our Lord. Amen.
+
+\subsection*{Prayer for Protection during the Night}
+
+\textsc{Angel} of God, to whose holy care I am committed by the divine mercy,
+enlighten, defend, and protect me this night from all sin and danger.  Amen.
+
+Visit, we beseech Thee, O Lord, this habitation, and drive from it all the
+snares of the enemy.  Let Thy holy Angels dwell herein to preserve us in peace;
+and may Thy blessing be upon us for ever, through Christ our Lord.  Amen.
+
+God the Father, bless us; Jesus Christ, defend and keep us; the virtue of the
+Holy Ghost enlighten and sanctify us this night and forever; and may the souls
+of the faithful departed rest in peace.  Amen.
+
+Bless, O Lord, the repose I am going to take in order to renew my strength, that
+I may be better able to serve Thee.  O all ye Saints and Angels! but chiefly
+thou, O Mother of God! intercede for me this night and during the rest of my
+life, but particularly at the hour of my death.
+
+May the divine assistance remain always with us. Amen.
+
+\subsection*{Ps. 129.  De Profundis}
+
+\textit{We have committed sins: we confess we have sinned.  But God grants pardon
+to him who repents.}
+
+Out of the depths have I cried unto Thee, O Lord: Lord hear my voice.
+
+Let Thine ears be attentive to the voice of my supplication.
+
+If Thou, Lord, shouldst mark iniquities, O Lord, who shall stand?
+
+But there is forgiveness with Thee: because of Thy law I wait for Thee, O Lord.
+
+My soul waiteth on His word: my soul hopeth in the Lord.
+
+From the morning watch even until night let Israel hope in the Lord:
+
+For with the Lord there is mercy, and with Him is plentiful redemption.
+
+And He shall redeem Israel, from all their iniquities.
+
+\textjuni{\char"2123}. Eternal rest give unto them, O Lord.\\
+\textjuni{\char"211F}. And let perpetual light shine upon them.\\
+\textjuni{\char"2123}. May they rest in peace.\\
+\textjuni{\char"211F}. Amen.
+
+\textit{Let us pray.}  O God, the Giver of pardon and Lover of man's salvation,
+we beseech Thee in Thy mercy to grant that our brethren, kinsfolk, and
+benefactors who have passed out of this life may, by the intercession of blessed
+Mary ever Virgin and of all Thy Saints, partake of everlasting bliss.  Through
+Christ our Lord. Amen.
+
+\subsection*{Evensong}
+
+Sweet Savior, bless us ere we go;\\
+Thy Word into our minds instill,\\
+And make our lukewarm hearts to glow\\
+With lowly love and fervent will.\\
+\textit{Through life’s long day and death’s dark night,\\
+O gentle Jesus, be our Light.}
+
+The day is done, its hours have run,\\
+And Thou hast taken count of all,\\
+The scanty triumphs grace hath won,\\
+The broken vow, the frequent fall.\\
+\textit{Through life’s long day and death’s dark night,\\
+O gentle Jesus, be our Light.}
+
+Grant us, dear Lord, from evil ways\\
+True absolution and release:\\
+And bless us, more than in past days,\\
+With purity and inward peace.\\
+\textit{Through life’s long day and death’s dark night,\\
+O gentle Jesus, be our Light.}
+
+Do more than pardon; give us joy,\\
+Sweet fear, and sober liberty,\\
+And simple hearts without alloy\\
+That only long to be like Thee.\\
+\textit{Through life’s long day and death’s dark night,\\
+O gentle Jesus, be our Light.}
+
+Labor is sweet, for Thou hast toiled,\\
+And care is light, for Thou hast cared;\\
+Let not our works with self be soiled,\\
+Nor in unsimple ways ensnared.\\
+\textit{Through life’s long day and death’s dark night,\\
+O gentle Jesus, be our Light.}
+
+For all we love, the poor, the sad,\\
+The sinful, unto Thee we call;\\
+O let Thy mercy make us glad:\\
+Thou art our Jesus, and our All.\\
+\textit{Through life’s long day and death’s dark night,\\
+O gentle Jesus, be our Light.}
+
+Sweet Savior, bless us; night is come;\\
+Through night and darkness near us be;\\
+Good angels watch about our home,\\
+And we are one day nearer Thee.\\
+\textit{Through life’s long day and death’s dark night,\\
+O gentle Jesus, be our Light.}
+
+\subsection*{Ejaculation}
+
+\textsc{May} the Heart of Jesus in the most Blessed Sacrament be praised,
+adored, and loved with grateful affection, at every moment, in all the
+tabernacles of the world, even to the end of time. Amen.
 
 \end{multicols}
 
