--- a/prayers.tex
+++ b/prayers.tex
@@ -47,7 +47,7 @@
 \fancyhf{}
 \rhead{\textbf{Traditional Catholic Prayers}}
 \lhead{\textbf{Morning Prayers}}
-\lfoot{\textit{https://github.com/johndec/tradcath-tex}}
+\lfoot{\textit{https://git.io/tradcath-tex}}
 \rfoot{\textit{Version 1}}
 
 \renewcommand{\headrulewidth}{1pt}
